--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,6 +7,9 @@
 </head>
 <body>
   <div class="container">
+    <div class="illustration">
+      <img src="/illustration.png">
+    </div>
     <div class="form-container">
       <h1>Registration</h1>
       <p>Create an account to enjoy all the features</p>
@@ -19,7 +22,7 @@
       <% if (typeof message !== 'undefined' && message) { %>
         <div class="message"><%= message %></div>
       <% } %>
-      <!-- <p>Already have an account?<a href="/home"> Log in</a></p> -->
+      <p>Already have an account?<a href="/"> Log in</a></p>
     </div>
   </div>
 </body>
